:bulb: background color changed

--- a/templates/ticket_info.html
+++ b/templates/ticket_info.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            background-color: #F44336;
+        }
+        
         .full-content {
             width: 50%;
             margin: 0 auto;
+        }
+        
+        .form-control {
+            background-color: #F44336;
+            color: whitesmoke;
+        }
+        
+        .col-form-label {
+            color: whitesmoke;
+        }
+        
+        .card-body {
+            background-color: #F44336;
         }
         
         .col-sm-4 {
@@ -58,7 +75,7 @@
 
                 <div class="form-group row d-flex justify-content-start">
                     <!-- <button type="button" onclick="update()" class="btn btn-info">Current Price</button> -->
-                    <button type="submit" class="btn btn-success">Update</button>
+                    <button type="submit" class="btn btn-outline-light">Update</button>
                 </div>
             </form>
         </div>
@@ -90,4 +107,5 @@
     </script>
 </body>
 {% endblock %}
+
 </html>
