--- a/templates/users.html
+++ b/templates/users.html
@@ -7,7 +7,7 @@
     <title>All User</title>
     <style>
         body {
-            background-color: rgb(212, 216, 240);
+            background-color: #F44336;
         }
         
         .full-content {
@@ -21,7 +21,7 @@
 <body>
 
     <div class="full-content justify-content-around mt-5" id="test">
-        <table class="table table-striped table-dark">
+        <table class="table table-striped table-dark text-center">
             <thead>
                 <tr>
                     <th scope="col">Name</th>
