--- a/templates/ticket_info.html
+++ b/templates/ticket_info.html
@@ -52,7 +52,7 @@
 
                 <div class="form-group row mx-auto">
                     <label for="sel1" class="col-sm-3 col-form-label">Class Type:</label>
-                    <select class="form-control col-sm-4" id="sel1" name="class_type" onmouseout="update()">
+                    <select class="form-control col-sm-4" id="sel1" name="class_type" onchange="update()">
                   <option disabled selected>Select a Class Type</option>
                   <option value="tourist">Tourist</option>
                   <option value="student">Student</option>
