:bulb: multiple username removed

--- a/templates/header.html
+++ b/templates/header.html
@@ -127,7 +127,7 @@
                 {% if request.session.username %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        <img src="{{request.session.image}}" alt="{{request.session.username}}" width="40" height="40" class="rounded-circle">
+                        <img src="{{request.session.image}}" width="40" height="40" class="rounded-circle">
                         <caption style="text-transform: capitalize;">{{request.session.username}}</caption>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" style="position: absolute;">
