--- a/templates/profile.html
+++ b/templates/profile.html
@@ -197,20 +197,21 @@
                             <div class="form-group row">
                                 <label class="col-lg-3 col-form-label form-control-label">Password</label>
                                 <div class="col-lg-9">
-                                    <input class="form-control" type="password" name="password" value="{{password}}">
+                                    <input class="form-control" type="password" id="password" name="password" value="{{password}}">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label class="col-lg-3 col-form-label form-control-label">Confirm password</label>
                                 <div class="col-lg-9">
-                                    <input class="form-control" type="password" value="{{password}}">
+                                    <input class="form-control" id="confirm_password" type="password" value="{{password}}">
+                                    <span id='message'></span>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label class="col-lg-3 col-form-label form-control-label"></label>
                                 <div class="col-lg-9">
                                     <input type="reset" onclick="cancel()" class="btn btn-secondary" value="Cancel">
-                                    <input type="submit" class="btn btn-primary" value="Save Changes">
+                                    <input type="submit" id="register" class="btn btn-primary" value="Save Changes">
                                 </div>
                             </div>
                         </form>
@@ -275,6 +276,21 @@
         </div>
     </div>
     <script>
+        $('#password, #confirm_password').on('keyup', function() {
+            if ($('#password').val() == $('#confirm_password').val()) {
+                $('#message').html('Matched').css('color', 'green');
+                document.getElementById('register').disabled = false;
+            } else {
+                $('#message').html('Not Matched').css({
+                    'color': 'red',
+                    'background-color': 'white',
+                    'font-weight': 'bold',
+                    'padding': '3px'
+                });
+                document.getElementById('register').disabled = true;
+            }
+        });
+
         function cancel() {
             window.location.href = '/';
         }
