Removed Unnecessary files

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -66,10 +66,6 @@
     display: -webkit-flex;
 }
 
-.form-v8-content .form-left {
-    /* margin-bottom: -4px; */
-}
-
 .form-v8-content .form-left img {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
@@ -259,7 +255,7 @@
 
 /* Responsive */
 
-@media screen and (max-width: 991px) {
+@media only screen and (max-width: 991px) {
     .form-v8-content {
         margin: 180px 20px;
         flex-direction: column;
@@ -289,12 +285,40 @@
     }
 }
 
-@media screen and (max-width: 325px) {
+@media only screen and (max-width: 560px) {
+    .form-v8-content {
+        margin: 0;
+        width: 100%;
+    }
+    .form-v8-content .form-right {
+        padding: 0;
+    }
+    .form-v8-content .form-detail .input-text {
+        margin-bottom: 20px;
+    }
+    .form-v8-content .form-detail input {
+        padding: 0;
+    }
+    .custom-select {
+        font-size: 15px;
+    }
+    .form-detail .tabcontent {
+        width: 80%;
+    }
+}
+
+@media only screen and (max-width: 425px) {
     .form-v8-content .tab {
         flex-direction: column;
         -o-flex-direction: column;
         -ms-flex-direction: column;
         -moz-flex-direction: column;
         -webkit-flex-direction: column;
+    }
+    .form-v8-content .tab .tablinks {
+        font-size: 18px;
+    }
+    .form-v8-content .form-row .form-row-inner .label {
+        font-size: 15px;
     }
 }
