--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,9 @@
 
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <link href="{% static 'style.css' %}" rel="stylesheet">
 </head>
@@ -144,10 +146,10 @@
     <script type="text/javascript">
         $('#password, #confirm_password').on('keyup', function() {
             if ($('#password').val() == $('#confirm_password').val()) {
-                $('#message').html('Matching').css('color', 'green');
+                $('#message').html('Matched').css('color', 'green');
                 document.getElementById('register').disabled = false;
             } else {
-                $('#message').html('Not Matching').css('color', 'red');
+                $('#message').html('Not Matched').css('color', 'red');
                 document.getElementById('register').disabled = true;
             }
         });
